tests/error/misc_errors/for_else_unsupported.err
Error: Unsupported (at $FILE:8:8)
  | 
6 |         pass
7 |     else:
8 |         print(i)
  |         ^^^^^^^^ Loop else clauses are not supported

Guppy compilation failed due to 1 previous error
